Implement equals, hashCode and isConvertableTo in ObjectType.
(cherry picked from commit a4dbfe3ab03aa82a55576d38476d86a5997a0ebc)